feat: implemented actions & triggers w/error handling
