# src/generated/swagger.json
@@ -9,7 +9,9 @@
   "paths": {
     "/example": {
       "get": {
-        "tags": ["Example"],
+        "tags": [
+          "Example"
+        ],
         "description": "Returns the hello world",
         "responses": {
           "200": {
@@ -18,9 +20,45 @@
         }
       }
     },
+    "/user/trigger": {
+      "post": {
+        "tags": [
+          "Triggers",
+          "Actions"
+        ],
+        "requestBody": {
+          "description": "Array of Actions to execute",
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "actions": {
+                    "type": "array",
+                    "items": {
+                      "type": "object"
+                    }
+                  }
+                },
+                "required": [
+                  "actions"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "actions execution responses"
+          }
+        }
+      }
+    },
     "/user/login": {
       "post": {
-        "tags": ["Users"],
+        "tags": [
+          "Users"
+        ],
         "requestBody": {
           "description": "Login to the application",
           "content": {
@@ -35,7 +73,10 @@
                     "type": "string"
                   }
                 },
-                "required": ["username", "password"]
+                "required": [
+                  "username",
+                  "password"
+                ]
               }
             }
           }
@@ -53,6 +94,10 @@
     {
       "name": "Example",
       "description": "Hello world end point"
+    },
+    {
+      "name": "Trigger",
+      "description": "Responsible for handling triggers and executing actions"
     },
     {
       "name": "Users",
